# research

./: .gitignore  analyze_matching.py  analyze_matching_std.py  pyproject.toml
data/raw/: project-true.csv  project.csv  project_catalog.csv  user_work_histories.csv
docs/: project_flow.md  system_overview.md
experiments/: matching_idf.ipynb  matching_idf.py
notebooks/: 01_user_work_histories-sudachi.ipynb  02_project_preprocessing.ipynb  03_word2vec.ipynb  04_matching.ipynb  10_wiki_corpus.ipynb  11_wiki_word2vec.ipynb  14_matching_wiki.ipynb  20_corpus.ipynb  20_matching.ipynb  20_word2vec-true.ipynb  21_word2vec-true.ipynb  22_word2vec-true.ipynb  23_matching_career.ipynb  24_matching_skill.ipynb  25_matching_comparison.ipynb  26_comparison.ipynb  corpus.ipynb  full_wiki_word2vec.ipynb  it_test_word2vec_wiki_full.ipynb  matching.ipynb  matching_wiki.ipynb  project_preprocessing.ipynb  user_work_histories-sudachi.ipynb  wiki-word2vec.ipynb  wiki_word2vec.ipynb  word2vec.ipynb
reports/: .$マッチング処理のデータフロー図_slide.drawio.svg.bkp  .$マッチング処理のデータフロー図_v02.drawio.svg.bkp  matching_comparison.md  matching_evaluation_wiki.md
src/: run_matching_comparison.py
src/analysis/: analyze_matching.py  analyze_matching_std.py  qualitative_analysis.py
src/experiments/: matching_idf.py
