[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=6.31.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.2.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "sudachidict-full>=20250825",
    "sudachipy>=0.6.10",
]
